--- a/package.json
+++ b/package.json
@@ -9,15 +9,8 @@
   "scripts": {
     "test": "mocha"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/richardcspds/GlowSeleniumJS.git"
-  },
   "author": "Richard Cespedes",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/richardcspds/GlowSeleniumJS/issues"
-  },
   "homepage": "https://github.com/richardcspds/GlowSeleniumJS#readme",
   "devDependencies": {
     "@babel/cli": "^7.5.5",
@@ -29,6 +22,9 @@
     "@wdio/mocha-framework": "^5.11.0",
     "@wdio/spec-reporter": "^5.11.0",
     "@wdio/sync": "^5.11.0",
+    "babel-core": "^6.26.3",
+    "chai": "^4.2.0",
+    "chai-webdriverio": "^1.0.0",
     "chromedriver": "^75.1.0",
     "mocha": "^6.1.4",
     "selenium-webdriver": "^4.0.0-alpha.4",
