--- a/package.json
+++ b/package.json
@@ -17,13 +17,14 @@
     "@babel/core": "^7.5.5",
     "@babel/preset-env": "^7.5.5",
     "@babel/register": "^7.5.5",
+    "@wdio/allure-reporter": "^5.11.0",
     "@wdio/cli": "^5.11.6",
     "@wdio/local-runner": "^5.11.5",
     "@wdio/mocha-framework": "^5.11.0",
     "@wdio/spec-reporter": "^5.11.0",
     "@wdio/sync": "^5.11.0",
     "babel-core": "^6.26.3",
-    "chai": "^4.2.0",
+    "chai": "^4.0.2",
     "chai-webdriverio": "^1.0.0",
     "chromedriver": "^75.1.0",
     "mocha": "^6.1.4",
@@ -31,6 +32,7 @@
     "sleep": "^6.1.0",
     "wdio": "^3.0.3",
     "wdio-chromedriver-service": "^5.0.2",
-    "wdio-mocha-framework": "^0.6.4"
+    "wdio-mocha-framework": "^0.6.4",
+    "webdriverio": "^5.11.6"
   }
 }
