--- a/package.json
+++ b/package.json
@@ -1,38 +1,48 @@
 {
-  "name": "glowseleniumjs",
-  "version": "1.0.0",
-  "description": "Package for Glow automation framework ",
-  "main": "index.js",
-  "directories": {
-    "test": "test"
-  },
-  "scripts": {
-    "test": "mocha"
-  },
-  "author": "Richard Cespedes",
-  "license": "ISC",
-  "homepage": "https://github.com/richardcspds/GlowSeleniumJS#readme",
-  "devDependencies": {
-    "@babel/cli": "^7.5.5",
-    "@babel/core": "^7.5.5",
-    "@babel/preset-env": "^7.5.5",
-    "@babel/register": "^7.5.5",
-    "@wdio/allure-reporter": "^5.11.0",
-    "@wdio/cli": "^5.11.6",
-    "@wdio/local-runner": "^5.11.5",
-    "@wdio/mocha-framework": "^5.11.0",
-    "@wdio/spec-reporter": "^5.11.0",
-    "@wdio/sync": "^5.11.0",
-    "babel-core": "^6.26.3",
-    "chai": "^4.0.2",
-    "chai-webdriverio": "^1.0.0",
-    "chromedriver": "^75.1.0",
-    "mocha": "^6.1.4",
-    "selenium-webdriver": "^4.0.0-alpha.4",
-    "sleep": "^6.1.0",
-    "wdio": "^3.0.3",
-    "wdio-chromedriver-service": "^5.0.2",
-    "wdio-mocha-framework": "^0.6.4",
-    "webdriverio": "^5.11.6"
-  }
+    "name": "glowseleniumjs",
+    "version": "1.0.0",
+    "description": "Package for Glow automation framework ",
+    "main": "index.js",
+    "directories": {
+        "test": "test"
+    },
+    "scripts": {
+        "test": "wdio wdio.conf.js",
+        "reports": "allure generate ./allure-results -o ./allure-report --clean && allure open ./allure-report",
+        "repl": "wdio repl chrome"
+    },
+    "author": "Richard Cespedes",
+    "license": "ISC",
+    "homepage": "https://github.com/richardcspds/GlowSeleniumJS#readme",
+    "devDependencies": {
+        "@babel/cli": "^7.5.5",
+        "@babel/core": "^7.5.5",
+        "@babel/plugin-proposal-decorators": "^7.4.4",
+        "@babel/preset-env": "^7.5.5",
+        "@babel/register": "^7.5.5",
+        "@wdio/allure-reporter": "^5.11.0",
+        "@wdio/cli": "^5.11.6",
+        "@wdio/local-runner": "^5.11.5",
+        "@wdio/mocha-framework": "^5.11.0",
+        "@wdio/spec-reporter": "^5.11.0",
+        "@wdio/sync": "^5.11.0",
+        "babel-core": "^6.26.3",
+        "babel-eslint": "^10.0.2",
+        "chai": "^4.0.2",
+        "chai-webdriverio": "^1.0.0",
+        "chromedriver": "^75.1.0",
+        "dateformat": "^3.0.3",
+        "eslint": "^6.1.0",
+        "eslint-plugin-babel": "^5.3.0",
+        "mocha": "^6.1.4",
+        "selenium-webdriver": "^4.0.0-alpha.4",
+        "sleep": "^6.1.0",
+        "wdio": "^3.0.3",
+        "wdio-chromedriver-service": "^5.0.2",
+        "wdio-mocha-framework": "^0.6.4",
+        "webdriverio": "^5.11.6"
+    },
+    "dependencies": {
+        "allure-commandline": "^2.9.0"
+    }
 }
